--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <input type="text" name="listItem" id="input" />
         <input type="submit" name="submit" id="submit" />
       </form>
+      <ul id="unordered-list"></ul>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/scripts.js "></script>
   </body>
 </html>
