Fix app description, leave comment about an issue

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="list-container">
       <h1>To-Do List:</h1>
       <p>
-        Double click to mark an item off, click on "X" to delete an item, and
+        Click on an item to cross it off, click on "X" to delete an item, and
         drag items to reorder!
       </p>
       <form name="list">
