Fix "cross item off"
Now crossing off an item won't cross off all the items above it

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="list-container">
       <h1>To-Do List:</h1>
       <p>
-        Click on an item to cross it off, click on "X" to delete an item, and
-        drag items to reorder!
+        Click on an item to cross it off, and click on "X" to delete an item.
       </p>
+
       <form name="list">
         <input type="text" name="listItem" id="input" />
         <input type="submit" name="submit" id="submit" />
